--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "sass-loader": "^12.4.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "netlify-cms-app": "^2.15.72"
+    "bootstrap": "^5.1.3"
   }
 }
