--- a/package.json
+++ b/package.json
@@ -17,5 +17,19 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3"
-  }
+  },
+  "name": "nuxt3-bootstrap5",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ModernAmusements/Nuxt3-Bootstrap5.git"
+  },
+  "author": "shady tawfik",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ModernAmusements/Nuxt3-Bootstrap5/issues"
+  },
+  "homepage": "https://github.com/ModernAmusements/Nuxt3-Bootstrap5#readme"
 }
